[package]
name = "ens-substream"
version = "0.1.0"
description = "ENS Substreams"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
hex-literal = "0.3.4"
prost = "^0.11.0"
substreams = "0.3.0"
substreams-ethereum = "0.6.0"
sha3 = "0.10.6"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = { version = "0.6.0" }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"

